Padding instead of margin to fix iOS overlap 🥞

--- a/style.css
+++ b/style.css
@@ -71,8 +71,7 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 1em;
-  margin-bottom: env(safe-area-inset-bottom);
+  padding: 1em calc(env(safe-area-inset-bottom) + 1em) 1em 1em;
   font-size: 0.8em;
   width: calc(100% - 2em);
   justify-content: space-between;
